--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,310 @@
     background:rgb(27, 126, 109);   
     box-shadow: 10px 11px 0px -3px rgba(9,54,9,0.58),63px 26px 34px -3px rgba(0,0,0,0.58);
 }
+.detalleCuerpo{
+    background:rgb(27, 126, 109);  
+   
+    position: absolute;
+    z-index: 5;
+    /* tamaño del sombreado*/
+    padding-left: 0.2em;
+    padding-bottom: 23em;
+    /*posicion del sombreado*/
+    bottom: 0.4em;
+    left: 3em;
+    -webkit-box-shadow: 1px 1px 1px 2px #000000; 
+box-shadow: 0px 0px 16px 0intpx #053d2b;
+
+}
+
+.letras{
+    position: absolute;
+    z-index:5;
+    /*posición de las letras*/
+    top: 12em;
+    left: 4.5em;
+    /* tamaño de letras*/
+    font-size: 1.4em;
+    font-family:Impact, fantasy;
+    color: white;
+}
+.letras2{
+    position:absolute;
+    z-index: 5;
+    /*posicion*/
+    top: 8.8em;
+    right: 3.7em;
+    /*estilo de fuente*/
+    font-size: 1.9em;
+    font-family: Courier New, monospace
+}
+/*joistick*/
+.joistickT{
+    background: black;
+    position: absolute;
+    z-index: 5;
+    /* tamaño del joistick*/
+    padding-left: 2em;
+    padding-bottom: 2em;
+    /*posicion del joistick*/
+    top:28em;
+    left: 4em;
+    /*Detalle*/
+    -webkit-box-shadow: 1px 1px 8px 3px rgba(0,0,0,0.5); 
+box-shadow: 1px 1px 8px 3px rgba(0,0,0,0.5);
+}
+.joistickL{
+    background: black;
+    position: absolute;
+    z-index: 5;
+    /* tamaño del joistick*/
+    padding-left: 2em;
+    padding-bottom: 2em;
+    /*posicion del joistick*/
+    top:30.5em;
+    left: 2em;
+    /*detalle*/
+    -webkit-box-shadow: 1px 1px 8px 3px rgba(0,0,0,0.5); 
+box-shadow: 1px 1px 8px 3px rgba(0,0,0,0.5);
+}
+.joistickR{
+    background: black;
+    position: absolute;
+    z-index: 5;
+    /* tamaño del joistick*/
+    padding-left: 2em;
+    padding-bottom: 2em;
+    /*posicion del joistick*/
+    top:30.5em;
+    left: 6.2em;
+    /*detalle*/
+    -webkit-box-shadow: 1px 1px 8px 3px rgba(0,0,0,0.5); 
+box-shadow: 1px 1px 8px 3px rgba(0,0,0,0.5);
+}
+.joistickB{
+    z-index: 5;
+    background: black;
+    position: absolute;
+    
+    /* tamaño del joistick*/
+    padding-left: 2em;
+    padding-bottom: 2em;
+    /*posicion del joistick*/
+    top:32.8em;
+    left: 4em;
+    /*detalle*/
+    -webkit-box-shadow: 1px 1px 8px 3px rgba(0,0,0,0.5); 
+box-shadow: 1px 1px 8px 3px rgba(0,0,0,0.5);
+}
+.joistickM{
+    background: black;
+    position: absolute;
+    z-index: 5;
+    /* tamaño del joistick*/
+    padding-left: 2em;
+    padding-bottom: 2em;
+    /*posicion del joistick*/
+    top:25.4em;
+    left: 3.5em;
+}
+.joistickI{
+    background: black;
+    position: absolute;
+    z-index: 8;
+    /* tamaño del joistick*/
+    padding-left: 2em;
+    padding-bottom: 2em;
+    border-radius: 1em;
+    /*posicion del joistick*/
+    top:30.5em;
+    left: 4em;
+}
+
+/*Boton B*/
+.botonB{
+    background-color: black;
+    position: absolute;
+    z-index: 5;
+    /*tamaño del boton*/
+    padding-left: 2.6em;
+    padding-bottom: 2.6em;
+    border-radius: 4em;
+    /*posicion del boton*/
+    top:31.3em;
+    left: 19em;
+    /*Detalles*/
+    -webkit-box-shadow: 1px 1px 8px 3px rgba(0,0,0,0.5); 
+box-shadow: 1px 1px 8px 3px rgba(0,0,0,0.5);
+}
+.b{
+    color: rgb(59, 59, 59);
+    position: absolute;
+    z-index: 5;
+     /*posicion del boton*/
+     bottom:7.24em;
+     right:3.5em;
+    /* tamaño de la letra*/
+     font-size: 2em;    
+}
+/*boton A*/
+.botonA{
+    background-color: black;
+    position: absolute;
+    z-index: 5;
+    /*tamaño del boton*/
+    padding-left: 2.6em;
+    padding-bottom: 2.6em;
+    border-radius: 4em;
+    /*posicion del boton*/
+    top:29.2em;
+    left: 23.8em;
+    /*detalle*/
+    -webkit-box-shadow: 1px 1px 8px 3px rgba(0,0,0,0.5); 
+box-shadow: 1px 1px 8px 3px rgba(0,0,0,0.5);
+}
+.a{
+    color: rgb(59, 59, 59);
+    position: absolute;
+    z-index: 5;
+     /*posicion del boton*/
+     bottom:8.2em;
+     right:1.5em;
+    /* tamaño de la letra*/
+     font-size: 2em;   
+}
+/*boton SELECT*/
+.botonSelect{
+    background-color: black;
+    position: absolute;
+    z-index: 5;
+    /*tamaño del boton*/
+    padding-left: 2.4em;
+    padding-bottom: 0.7em;
+    border-radius: 3em;
+    /*posicion del boton*/
+    bottom: 10.4em;
+    left: 10.3em;
+    /*Detalle*/
+    -webkit-box-shadow: 1px 1px 8px 3px rgba(0,0,0,0.5); 
+box-shadow: 1px 1px 8px 3px rgba(0,0,0,0.5);
+}
+/* boton START*/
+.botonStart{
+    background-color: black;
+    position: absolute;
+    z-index: 5;
+    /*tamaño del boton*/
+    padding-left: 2.4em;
+    padding-bottom: 0.7em;
+    border-radius: 3em;
+    /*posicion del boton*/
+    bottom: 10.4em;
+    left: 15.5em;
+    /*Detalle*/
+    -webkit-box-shadow: 1px 1px 8px 3px rgba(0,0,0,0.5); 
+box-shadow: 1px 1px 8px 3px rgba(0,0,0,0.5);
+}
+.select{    
+    color: rgb(27, 78, 12);
+    position: absolute;
+    z-index: 2; 
+    /*posicion de las letras*/
+    bottom:10em;
+    left:12.5em;
+    /*estilo y tamaño*/
+    font-size: 0.7em;
+}
+.start{    
+    color: rgb(27, 78, 12);
+    position: absolute;
+    z-index: 2; 
+    /*posicion de las letras*/
+    bottom:10em;
+    right:13.8em;
+    /*estilo y tamaño*/
+    font-size: 0.7em;
+}
+
+/*parte negra de la pantalla*/
+.pantallaNegro{
+    background-color: black;
+    position: absolute;
+    display: flex;
+    z-index: 2;
+    /*distancia de los bordes de la pantalla*/
+    margin-left: 1em;
+    margin-top: 1em;
+    /*tamaño de la pantalla*/
+    padding-left: 23em;
+    padding-bottom: 18.7em;
+    border-bottom-left-radius: 3em;
+    border-bottom-right-radius: 3em;
+    box-shadow:inset 0 0 0 4px rgb(27, 27, 27);
+}
+/*parte principal de la pantalla*/
+.pantallaMain{
+    background-color: blanchedalmond;
+    position:absolute;
+    display: flex;
+    z-index: 4;
+    /*distancia de los bordes*/
+    margin-top: 3em;
+    margin-left: 4.4em;
+    /*tamaño de la pantall*/
+    padding-bottom:13em ;
+    padding-left: 16.4em; 
+    box-shadow:inset 0 0 0 4px rgb(70, 70, 70);
+}
+
+/*luz de encendido y letras*/
+.luz{
+    background-color: red;
+    display: flex;
+    position: absolute;
+    z-index: 2;
+    /*tamaño*/
+    padding-bottom: 0.6em;
+    padding-left: 0.6em;
+    border-radius: 1em;
+    /*distacia del borde*/
+    left:0.5em;
+    top:5em;
+}
+.power{
+    color: rgb(116, 116, 116);
+    position: absolute;
+    z-index: 2; 
+    /*posicion de las letras de POWER*/
+    top: 12.8em;
+    left:4em;
+    /*estilo y tamaóp*/
+    font-size: 0.4em;
+    
+}
+/* letras NINTENDO*/
+.nintendo{
+    color: rgb(27, 78, 12);
+    position: absolute;
+    z-index: 2; 
+    /*posicion de las letras*/
+    top:21.5em;
+    left:9.5em;
+    /*estilo y tamaño*/
+     
+}
+.elipseN{
+    background:rgb(27, 126, 109);
+    box-shadow:inset 0 0 0 2.5px rgb(27, 78, 12);
+    position: absolute;
+    z-index: 1; 
+
+    padding-bottom: 2em;
+    padding-left: 6em;
+    border-radius: 2em;
+
+    top:21em;
+    left:9em;
+}
 
 
 
