--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 
+
 /*cuerpo de la consola*/
 .cuerpo{
     position: absolute;
@@ -32,8 +33,7 @@
     /*posicion del sombreado*/
     bottom: 0.4em;
     left: 3em;
-    -webkit-box-shadow: 1px 1px 1px 2px #000000; 
-box-shadow: 0px 0px 16px 0intpx #053d2b;
+    -webkit-box-shadow: 0px 0px 27px 1px #02641b;
 
 }
 
@@ -141,16 +141,16 @@ box-shadow: 1px 1px 8px 3px rgba(0,0,0,0.5);
 }
 
 /*Boton B*/
-.botonB{
+#botonB{
     background-color: black;
     position: absolute;
     z-index: 5;
     /*tamaño del boton*/
-    padding-left: 2.6em;
-    padding-bottom: 2.6em;
+    padding-left: 2.7em;
+    padding-bottom: 2em;
     border-radius: 4em;
     /*posicion del boton*/
-    top:31.3em;
+    top:31.1em;
     left: 19em;
     /*Detalles*/
     -webkit-box-shadow: 1px 1px 8px 3px rgba(0,0,0,0.5); 
@@ -277,7 +277,7 @@ box-shadow: 1px 1px 8px 3px rgba(0,0,0,0.5);
 }
 
 /*luz de encendido y letras*/
-.luz{
+#luz{
     background-color: red;
     display: flex;
     position: absolute;
@@ -325,7 +325,19 @@ box-shadow: 1px 1px 8px 3px rgba(0,0,0,0.5);
     top:21em;
     left:9em;
 }
+/*imagen de fondo*/
 
-
+#imagen{
+    position: relative;
+    /*posicion*/
+    z-index: 1;
+    top:4em;
+    left: 8.7em;
+    /*tamaño*/
+    padding-top: 0.5em;
+    
+    height: 12.5em;
+    width: 15.9em;
+}
 
 
